--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
+  
   "keywords": [],
-  "author": "",
+  "author": "Balaji Rai",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
